bug 295646: Whitespace at the end of a document is thrown away by the tokenizer. r+sr=bzbarsky a=shaver